--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Cloud - Home</title>
+    <title>Zipitto - Home</title>
     <style>
         body {
             margin: 0;
@@ -107,8 +107,10 @@
     </header>
 
     <main>
-        <h1>A Cloud</h1>
-        <p>Home of the best articles on the planet</p>
+        <h1>Zipitto</h1>
+        <p>Home of the best articles on the planet.
+            and a accessible easy to use zip tool.
+        </p>
 
         <hr>
 
@@ -134,9 +136,9 @@
         <hr>
 
         <footer aria-label="Footer">
-            <a href="#">Twitter</a>
-            <a href="#">LinkedIn</a>
-            <a href="#">GitHub</a>
+            <a href="https://x.com/zipittocom">Follow me on X</a>
+            <a href="download.html">Download Zipitto</a>
+            <a href="articles.html">Passed articles</a>
             <button onclick="location.href='#'">Past Articles</button>
         </footer>
     </main>
