--- a/download.html
+++ b/download.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Cloud - Download</title>
+    <title>Zipitto - Download</title>
     <style>
         /* Basic page styling */
         body {
@@ -47,6 +47,25 @@
             outline: 3px solid #ff00ff;
         }
 
+        /* How it works section */
+        section {
+            padding: 2em 1em;
+        }
+        h2 {
+            font-size: 3em;
+            margin-bottom: 0.5em;
+            color: #00bfff;
+        }
+        ol {
+            text-align: left;
+            max-width: 800px;
+            margin: 0 auto;
+            font-size: 1.3em;
+        }
+        ol li {
+            margin: 1em 0;
+        }
+
         /* Footer */
         footer {
             padding: 2em 1em;
@@ -66,13 +85,24 @@
 <body>
 
 <header>
-    <h1>A Cloud Download</h1>
-    <p>Grab the best tool right here, right now.</p>
+    <h1>Zipitto Download</h1>
+    <p>the best and simplest way to manage files</p>
 </header>
 
 <section>
-    <p>Your go-to solution for everything tech. Lightning fast, ultra secure, and completely free.</p>
+    <p>contact us on X for support. Lightning fast, ultra secure, and completely free.</p>
     <a href="#" class="download-btn" download>Download Now</a>
+</section>
+
+<section>
+    <h2>How It Works</h2>
+    <p>With this tool, zipping or unzipping files becomes as easy as clicking a button — literally. Here’s how it works:</p>
+    <ol>
+        <li>Start the program.</li>
+        <li>Press the spacebar.</li>
+        <li>Select a <code>.zip</code> file to uncompress, or choose a folder/file to compress.</li>
+        <li>Once the compression or uncompression is complete, the program automatically opens the folder where your new file or folder is located.</li>
+    </ol>
 </section>
 
 <footer>
