--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
         <nav aria-label="Main Navigation">
             <button aria-expanded="false" aria-controls="nav-menu" onclick="toggleMenu()">Menu</button>
             <ul id="nav-menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="https://zipitto.com">Home</a></li>
+                <li><a href="download.html">Download</a></li>
+                <li><a href="https://www.paypal.me/AndriasRA">Donate</a></li>
             </ul>
         </nav>
     </header>
@@ -139,7 +139,7 @@
             <a href="https://x.com/zipittocom">Follow me on X</a>
             <a href="download.html">Download Zipitto</a>
             <a href="articles.html">Passed articles</a>
-            <button onclick="location.href='#'">Past Articles</button>
+            <button onclick="location.href='https://www.paypal.me/AndriasRA'">Donate</button>
         </footer>
     </main>
 
