--- a/download.html
+++ b/download.html
@@ -123,4 +123,51 @@
         <ul id="nav-menu">
             <li><a href="https://zipitto.com">Home</a></li>
             <li><a href="download.html">Download</a></li>
-            <li><a href="
+            <li><a href="https://www.paypal.me/AndriasRA">Donate</a></li>
+        </ul>
+    </nav>
+</header>
+
+<main>
+    <h1>Zipitto Download</h1>
+    <p>Grab the best tool right here, right now.</p>
+
+    <section>
+        <p>Your go-to solution for everything tech. Lightning fast, ultra secure, and completely free.</p>
+        <a href="#" class="download-btn" download>Download Now</a>
+    </section>
+
+    <section>
+        <h2>How It Works</h2>
+        <p>With this tool, zipping or unzipping files becomes as easy as clicking a button — literally. Here’s how it works:</p>
+        <ol>
+            <li>Start the program.</li>
+            <li>Press the spacebar.</li>
+            <li>Select a <code>.zip</code> file to uncompress, or choose a folder/file to compress.</li>
+            <li>Once the compression or uncompression is complete, the program automatically opens the folder where your new file or folder is located.</li>
+        </ol>
+    </section>
+
+    <hr>
+
+    <footer aria-label="Footer">
+        <a href="https://x.com/zipittocom">Follow me on X</a>
+        <a href="download.html">Download Zipitto</a>
+        <a href="articles.html">Passed articles</a>
+        <button onclick="location.href='https://www.paypal.me/AndriasRA'">Donate</button>
+    </footer>
+</main>
+
+<script>
+    function toggleMenu() {
+        const menu = document.getElementById("nav-menu");
+        const button = document.querySelector("nav button");
+        const isExpanded = button.getAttribute("aria-expanded") === "true";
+        
+        menu.classList.toggle("active");
+        button.setAttribute("aria-expanded", !isExpanded);
+    }
+</script>
+
+</body>
+</html>
