--- a/download.html
+++ b/download.html
@@ -134,7 +134,7 @@
 
     <section>
         <p>Your go-to solution for everything tech. Lightning fast, ultra secure, and completely free.</p>
-        <a href="#" class="download-btn" download>Download Now</a>
+        <a href="https://github.com/playssoc/zipitto/releases/tag/Zipitto" class="download-btn" download>Download Now</a>
     </section>
 
     <section>
